# rev1_simuls

./: .isort.cfg  .pre-commit-config.yaml  404.html  index.html  objects.inv  pyproject.toml  pyproject.toml~  sitemap.xml
ChooSiow70nNdata/: choo_siow_cupid_75265_1.pkl  choo_siow_cupid_base_functions.pkl  choo_siow_cupid_mde_true.pkl  choo_siow_cupid_mus_norm_fixed_1.pkl  choo_siow_cupid_small_varmus.pkl  choo_siow_cupid_varmus_norm.pkl  large_muxy.txt  large_my.txt  large_nx.txt  large_quantiles_marriages.txt  large_varmus.pkl  muxy70nN.txt  my70n.txt  nx70n.txt  small_muxy.txt  small_my.txt  small_nx.txt  small_quantiles_marriages.txt
Results/: choo_siow_cupid_75265_1.pkl
config/: index.html
plots/: index.html
read_data/: index.html
rev1_simuls/: check_phi_nonparam.py  config.py  create_two_samples.py  main.py  mkdocs.yml  plots.py  read_data.py  simulate.py  specification.py  utils.py
rev1_simuls/docs/: config.md  create_two_samples.md  index.md  plots.md  read_data.md  specification.md  utils.md
search/: search_index.json
specification/: index.html
tests/: test_utils.py
utils/: index.html
