[tool.poetry]
name = "rev1-simuls"
version = "0.1.0"
description = ""
authors = ["Bernard Salanie <bs2237@columbia.edu>"]
readme = "README.md"
packages = [{include = "rev1_simuls"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
cupid-matching = "^1.0.4"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
